fix(3163901936): align alpha disclaimer to figma

--- a/src/components/UI/Toast/CallToActionToast/CallToActionToast.module.scss
+++ b/src/components/UI/Toast/CallToActionToast/CallToActionToast.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../index';
 
 .callToActionToast {
-  max-width: 450px;
+  max-width: 400px;
   background: $--color-white;
   box-shadow: 0 12px 16px -4px rgba(16, 24, 40, 0.1), 0 4px 6px -2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
@@ -13,17 +13,17 @@
     height: 100%;
 
     & > * {
-      padding: 20px 0;
+      padding: 14px 0;
     }
 
     .left {
-      width: 20%;
+      width: 22%;
       overflow: hidden;
       border-radius: 8px 0 0 8px;
 
       .sideIcon {
         position: relative;
-        left: 25%;
+        left: 44%;
         top: 50%;
         transform: translateY(-50%);
       }
@@ -32,10 +32,10 @@
     .right {
       width: 80%;
       border-radius: 0 8px 8px 0;
-      padding: 10px 20px;
+      padding: 16px 16px 8px 16px;
 
       & > div {
-        padding: 5px 0;
+        padding-bottom: 8px;
       }
     }
   }
