--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -35,6 +35,7 @@ $--color-maize: #fec84b;
 $--color-very-light-blue: #5865f2;
 $--color-dark-blue-gray: #65668c;
 $--color-brilliant-azure: #4295f7;
+$--color-international-orange-aerospace: #ff4f0a;
 
 :export {
   colorBlack: $--color-black;
@@ -57,4 +58,5 @@ $--color-brilliant-azure: #4295f7;
   colorFlame: $--color-flame;
   colorDarkBlueGray: $--color-dark-blue-gray;
   colorBrilliantAzure: $--color-brilliant-azure;
+  colorInternationalOrangeAerospace: $--color-international-orange-aerospace;
 }
